# anchor-rust

./: Anchor.toml  Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
programs/hello-world/: Cargo.toml
programs/hello-world/src/: lib.rs
tests/: hello-world.ts
