[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hello-world = { path = "../programs/hello-world"}
solana-client = "1.18.12"
solana-cli-config = "1.18.12"
solana-clap-utils = "1.18.12"
solana-sdk = "1.18.12"
borsh = {version = "1.5.0", features = ["derive"]}